benchmarking/umbridge/kubernetes/model.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: model-deployment
spec:
  selector:
    matchLabels:
      app: model
  replicas: 1
  template:
    metadata:
      labels:
        app: model
    spec:
      containers:
      - name: model
        image: ghcr.io/crambor/benchmarkmodel:v1.1.0
        resources:
          requests:
            cpu: 1
            memory: 1Gi
          limits:
            cpu: 1
            memory: 1Gi
