benchmarking/umbridge/kubernetes/svc-ingress.yml
apiVersion: v1
kind: Service
metadata:
  name: my-svc
  namespace: default
  annotations:
    haproxy.org/load-balance: "leastconn"

spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 4243
  selector:
    app: model
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
spec:
  ingressClassName: haproxy
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: my-svc
            port:
              number: 80
